[project]
name = "ComfyUI_Lama_Remover_Revived"
description = "A very simple ComfyUI node to remove item with mask."
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = ["Pillow"]

[project.urls]
Repository = "https://github.com/silveroxides/comfyui-lama-remover"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "silveroxides"
DisplayName = "ComfyUI Lama Remover Revived"
Icon = ""
